leaderboard: adjusted leaderboards column size

--- a/steps/templates/steps/leaderboard.html
+++ b/steps/templates/steps/leaderboard.html
@@ -36,7 +36,7 @@
         <div class="container is-max-desktop">
             <div class="columns">
                 <!-- 🏆 TEAM LEADERBOARD -->
-                <div class="column is-6">
+                <div class="column is-5">
                     <div class="box">
                         <h2 class="subtitle">Teams</h2>
                         <table class="table is-fullwidth is-striped">
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <!-- 🥇 PARTICIPANT LEADERBOARD -->
-                <div class="column is-6">
+                <div class="column is-7">
                     <div class="box">
                         <h2 class="subtitle">Participants</h2>
                         <table class="table is-fullwidth is-striped">
@@ -85,7 +85,7 @@
                                     <th>#</th>
                                     <th>Name</th>
                                     <th>Team</th>
-                                    <th>Steps</th>
+                                    <th>Total Steps</th>
                                 </tr>
                             </thead>
                             <tbody>
