--- a/steps/templates/steps/leaderboard.html
+++ b/steps/templates/steps/leaderboard.html
@@ -1,4 +1,5 @@
 {% extends "steps/base.html" %}
+{% load humanize %}
 {% block content %}
 <section class="section">
     <div class="container is-max-desktop has-text-centered mb-4">
@@ -68,7 +69,7 @@
                                                             margin-right: 6px"></span>
                                             {{ team.team__name }}
                                         </td>
-                                        <td>{{ team.team_steps|default:0 }}</td>
+                                        <td>{{ team.team_steps|intcomma|default:0 }}</td>
                                     </tr>
                                 {% endfor %}
                             </tbody>
@@ -112,7 +113,7 @@
                                                             margin-right: 6px"></span>
                                             {{ p.team.name }}
                                         </td>
-                                        <td>{{ p.latest_steps|default:0 }}</td>
+                                        <td>{{ p.latest_steps|intcomma|default:0 }}</td>
                                     </tr>
                                 {% endfor %}
                             </tbody>
